--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -20,7 +20,7 @@
       <ion-item>{{tarea}}</ion-item>
 
       <ion-item-options>
-        <button ion-button (click)="archivarTarea(indiceTarea)">
+        <button ion-button (click)="archivarTarea(indiceTarea)" color="danger">
           <ion-icon name="trash"></ion-icon>
         </button>
       </ion-item-options>
